heart beat and database

--- a/app/src/main/res/layout/fragment_heart.xml
+++ b/app/src/main/res/layout/fragment_heart.xml
@@ -8,10 +8,10 @@
     tools:context=".HeartFragment">
 
     <ImageView
-        android:id="@+id/imageView5"
+        android:id="@+id/heartImg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/temp_red_bg"
+        android:src="@drawable/heart_bg"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -38,11 +38,33 @@
         android:text="0"
         android:textColor="@color/white"
         android:textSize="60sp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
+        app:layout_constraintBottom_toBottomOf="@+id/heartImg"
         app:layout_constraintEnd_toStartOf="@+id/textView6"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintHorizontal_chainStyle="packed"
-        app:layout_constraintStart_toEndOf="@+id/imageView5"
-        app:layout_constraintStart_toStartOf="@+id/imageView5"
-        app:layout_constraintTop_toTopOf="@+id/imageView5" />
+        app:layout_constraintStart_toEndOf="@+id/heartImg"
+        app:layout_constraintStart_toStartOf="@+id/heartImg"
+        app:layout_constraintTop_toTopOf="@+id/heartImg" />
+
+    <TextView
+        android:id="@+id/heartInfoGuide"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="Click Above to Start taking Reading"
+        android:textColor="@color/black"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/heartImg" />
+
+    <SurfaceView
+        android:id="@+id/preview"
+        android:layout_width="1dp"
+        android:layout_height="1dp"
+        app:layout_constraintBottom_toBottomOf="@+id/heartImg"
+        app:layout_constraintEnd_toEndOf="@+id/heartImg"
+        app:layout_constraintStart_toStartOf="@+id/heartImg"
+        app:layout_constraintTop_toBottomOf="@+id/bpmRate" />
 </androidx.constraintlayout.widget.ConstraintLayout>
