--- a/app/src/main/res/layout/fragment_heart.xml
+++ b/app/src/main/res/layout/fragment_heart.xml
@@ -7,10 +7,24 @@
     android:layout_height="match_parent"
     tools:context=".HeartFragment">
 
+    <TextView
+        android:id="@+id/textView8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:text="HEART RATE"
+        android:textColor="#5DBAE8"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="@+id/heartImg"
+        app:layout_constraintStart_toStartOf="@+id/heartImg"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <ImageView
         android:id="@+id/heartImg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="32dp"
         android:src="@drawable/heart_bg"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -52,8 +66,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="Click Above to Start taking Reading"
-        android:textColor="@color/black"
+        android:textColor="#FF9800"
         android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -67,4 +82,32 @@
         app:layout_constraintEnd_toEndOf="@+id/heartImg"
         app:layout_constraintStart_toStartOf="@+id/heartImg"
         app:layout_constraintTop_toBottomOf="@+id/bpmRate" />
+
+    <TextView
+        android:id="@+id/textView11"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:drawableLeft="@drawable/ic_baseline_info_24"
+        android:drawablePadding="5dp"
+        android:text="Place your finger on the camera and flash lens to start measuring heart rate"
+        android:textColor="#EF5C8E"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="@+id/heartImg"
+        app:layout_constraintStart_toStartOf="@+id/heartImg"
+        app:layout_constraintTop_toBottomOf="@+id/heartInfoGuide" />
+
+    <TextView
+        android:id="@+id/textView12"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:drawableLeft="@drawable/ic_baseline_info_24"
+        android:drawablePadding="5dp"
+        android:text="Make sure you covered up fully both camera and flash with your finger"
+        android:textColor="#EF5C8E"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="@+id/heartImg"
+        app:layout_constraintStart_toStartOf="@+id/heartImg"
+        app:layout_constraintTop_toBottomOf="@+id/textView11" />
 </androidx.constraintlayout.widget.ConstraintLayout>
